# urisys-automation-lab

./: .dockerignore  Dockerfile  README.md  docker-compose.lab.yml  pyproject.toml
data/: events.jsonl
docker/: entrypoint.sh
docs/: 10_AUTOMATIONS.md  ARCHITECTURE.md  CHAT-DEPRECATED.md  STT.md  WEBRTC_CHAT.md
flows/: 01_install_browser.uri.flow.yaml  02_update_system_tui.uri.flow.yaml  03_open_browser_gui.uri.flow.yaml  04_browser_download_file.uri.flow.yaml  05_fill_form_gui.uri.flow.yaml  06_terminal_htop_tui.uri.flow.yaml  07_edit_config_nano_tui.uri.flow.yaml  08_voice_command_to_kvm.uri.flow.yaml  09_webrtc_video_chat_rdp.uri.flow.yaml  10_full_maintenance_rdp.uri.flow.yaml
labedge/: __init__.py  runtime.py
markpacts/: log-flow.contract.markpact.md  urichat.contract.markpact.md  urillm-decide.contract.markpact.md  urimessage.contract.markpact.md  uristt.contract.markpact.md  uriwebrtc.contract.markpact.md
routes/: local-rdp.routes.yaml
scripts/: docker-down.sh  docker-logs.sh  docker-smoke.sh  docker-up.sh  run-lab.sh  validate-flows.sh
server/: automation_lab_server.py  flow_runner.py  lab_uri_adapter.py  static_server.py
src/urisys_lab/: __init__.py  core.py  paths.py
src/urisys_lab/lenovo/: __init__.py  cli.py
src/urisys_lab/sessions/: __init__.py  cli.py  expectations.py  lab_flows.py  lab_rdp.py  runners.py  util.py
tests/: test_core_screenshots.py  test_flow_08_plan.py  test_flow_09_plan.py  test_flow_expectations.py  test_import_labedge.py  test_lab_handlers.py  test_llm_plan_handlers.py  test_runtime.py  test_uristt_manifest.py
urichat/: handlers.py  routes.py
urimessage/: __init__.py  handlers.py  routes.py
uristt/: handlers.py  manifest.tts.yaml  manifest.yaml  manifest_loader.py  routes.py
uriwebrtc/: handlers.py  routes.py
web/: app.js  index.html
